fixed image modal + dragging on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,16 @@ body {
 h1, h3, p, .caption, .button-group button {
     font-family: 'Figtree';
 }
+
+h1 {
+    font-size: 40px;
+}
+
 .home-box {
     background-color: var(--accent-home);
-    width: 500px;
+    width: 700px;
     padding-top: 80px;
     padding-bottom: 110px;
-    padding-left: 40px;
-    padding-right: 40px;
     border-radius: 16px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -59,7 +62,13 @@ a:hover {
     transform: scale(1.04);
 }
 
-
+.theme-widget {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+  
 .theme-widget img {
     width: 100px;
     cursor: pointer;
@@ -69,12 +78,25 @@ a:hover {
 .theme-widget img:hover {
     transform: scale(1.15);
 }
-  
-/* Ensure h2 can contain absolutely positioned elements */
-h2 {
-    position: relative;
-}
 
+.theme-hint {
+    font-size: .9rem;
+    color: var(--accent);
+    margin-bottom: 2px;
+    opacity: 0.8;
+}  
+
+
+.theme-curve {
+    display: none;
+}  
+
+@media (max-width: 800px) {
+    .theme-curve {
+        display: block;
+    }
+}
+  
 /* Centered Home Screen */
 main {
     height: 100vh;
